--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <div class="drop-container flex">
                 <div class="">
                   <div class="spacing-dropdown">
-                    <li class="dropdown-title"><a class="drop-d-a-t" href="">Map</a></li>
+                    <li class="dropdown-title"><a class="drop-d-a-t" href="./Plan_your_trip.html">Map</a></li>
                     <div class="mini-space"></div>
                     <li><a class="drop-d-a d-text" href="">Cafè</a></li>
                     <li><a class="drop-d-a d-text" href="">Toalett</a></li>
@@ -65,7 +65,7 @@
                   <li><a class="drop-d-a d-text" href="">Quiet zone</a></li>
                 </div>
                 <div class="spacing-dropdown">
-                  <li class="dropdown-title"><a class="drop-d-a-t" href="">How to get there</a></li>
+                  <li class="dropdown-title"><a class="drop-d-a-t" href="./Plan_your_trip.html">How to get there</a></li>
                   <div class="mini-space"></div>
                   <li><a class="drop-d-a d-text" href="">Distance</a></li>
                   <li><a class="drop-d-a d-text" href="">Public transport</a></li>
@@ -80,8 +80,6 @@
                 </div>
               </div>
             </ul>
-
-
           </li>
           <li><a class="menu-font" href="./Tickets.html">Tickets</a></li>
         </ul>
