--- a/Explore_the_museum.html
+++ b/Explore_the_museum.html
@@ -33,18 +33,56 @@
           <span></span>
           <span></span>
         </label>
-        <ul class="menu">
+        <ul class="menu" id="nav">
           <li>
-            <a class="menu-font" href="./Explore_the_museum.html"
+            <a class="menu-font" href="./Explore_the_museum.html" style="
+            border-bottom: solid 2px #bfbfbf;"
               >Experiences</a
             >
           </li>
           <li><a class="menu-font" href="">Café</a></li>
           <li><a class="menu-font" href="">Gift shop</a></li>
           <li>
-            <a class="menu-font" href="./Plan_your_trip.html"
+            <a class="menu-font dropdown" href="./Plan_your_trip.html"
               >Plan your visit</a
             >
+
+            <ul>
+              <div class="drop-container flex">
+                <div class="">
+                  <div class="spacing-dropdown">
+                    <li class="dropdown-title"><a class="drop-d-a-t" href="./Plan_your_trip.html">Map</a></li>
+                    <div class="mini-space"></div>
+                    <li><a class="drop-d-a d-text" href="">Cafè</a></li>
+                    <li><a class="drop-d-a d-text" href="">Toalett</a></li>
+                    <li><a class="drop-d-a d-text" href="">Baby changing room</a></li>
+                    <li><a class="drop-d-a d-text" href="">Exhibition</a></li>
+                  </div>
+                </div>
+                <div class="spacing-dropdown">
+                  <li class="dropdown-title"><a class="drop-d-a-t" href="">Handicap</a></li>
+                  <div class="mini-space"></div>
+                  <li><a class="drop-d-a d-text" href="">Wheelchair rental</a></li>
+                  <li><a class="drop-d-a d-text" href="">Help</a></li>
+                  <li><a class="drop-d-a d-text" href="">Headset</a></li>
+                  <li><a class="drop-d-a d-text" href="">Quiet zone</a></li>
+                </div>
+                <div class="spacing-dropdown">
+                  <li class="dropdown-title"><a class="drop-d-a-t" href="./Plan_your_trip.html">How to get there</a></li>
+                  <div class="mini-space"></div>
+                  <li><a class="drop-d-a d-text" href="">Distance</a></li>
+                  <li><a class="drop-d-a d-text" href="">Public transport</a></li>
+                  <li><a class="drop-d-a d-text" href="">Parking & shuttlebus</a></li>
+                </div>
+                <div class="spacing-dropdown">
+                  <li class="dropdown-title"><a class="drop-d-a-t" href="">General info</a></li>
+                  <div class="mini-space"></div>
+                  <li><a class="drop-d-a d-text" href="">Lockers info</a></li>
+                  <li><a class="drop-d-a d-text" href="">Tour guides</a></li>
+                  <li><a class="drop-d-a d-text" href="">Expedia</a></li>
+                </div>
+              </div>
+            </ul>
           </li>
           <li><a class="menu-font" href="./Tickets.html">Tickets</a></li>
         </ul>
@@ -68,7 +106,7 @@
       </div>
 
       <section>
-        <h2 class="white_text">Vikingships</h2>
+        <h2 class="white_text centeredtext">Vikingships</h2>
         <div class="card__wrapper">
           <div class="card__img">
             <img class="card_img_img" src="./Assets/Oseberg_skipet.jpeg" />
@@ -127,7 +165,7 @@
           </div>
         </div>
 
-        <h2 class="white_text">VR Experience</h2>
+        <h2 class="white_text centeredtext">VR Experience</h2>
         <br />
 
         <div class="ren body vid-ex">
@@ -148,7 +186,7 @@
           <a href=""><button class="c-a-btn-slide">Tickets</button></a>
         </div>
 
-        <h2 class="white_text">Exhibitions</h2>
+        <h2 class="white_text centeredtext">Exhibitions</h2>
         <br />
 
         <div class="con sli">
