--- a/webstore.html
+++ b/webstore.html
@@ -34,7 +34,7 @@
           <span></span>
           <span></span>
         </label>
-        <ul class="menu">
+        <ul class="menu" id="nav">
           <li>
             <a class="menu-font" href="./Explore_the_museum.html"
               >Experiences</a
@@ -43,9 +43,64 @@
           <li><a class="menu-font" href="">Café</a></li>
           <li><a class="menu-font" href="">Gift shop</a></li>
           <li>
-            <a class="menu-font" href="./Plan_your_trip.html"
+            <a class="menu-font dropdown" href="./Plan_your_trip.html"
               >Plan your visit</a
             >
+
+            <ul>
+              <div class="drop-container flex">
+                <div class="">
+                  <div class="spacing-dropdown">
+                    <li class="dropdown-title">
+                      <a class="drop-d-a-t" href="./Plan_your_trip.html">Map</a>
+                    </li>
+                    <div class="mini-space"></div>
+                    <li><a class="drop-d-a d-text" href="">Cafè</a></li>
+                    <li><a class="drop-d-a d-text" href="">Toalett</a></li>
+                    <li>
+                      <a class="drop-d-a d-text" href="">Baby changing room</a>
+                    </li>
+                    <li><a class="drop-d-a d-text" href="">Exhibition</a></li>
+                  </div>
+                </div>
+                <div class="spacing-dropdown">
+                  <li class="dropdown-title">
+                    <a class="drop-d-a-t" href="">Handicap</a>
+                  </li>
+                  <div class="mini-space"></div>
+                  <li>
+                    <a class="drop-d-a d-text" href="">Wheelchair rental</a>
+                  </li>
+                  <li><a class="drop-d-a d-text" href="">Help</a></li>
+                  <li><a class="drop-d-a d-text" href="">Headset</a></li>
+                  <li><a class="drop-d-a d-text" href="">Quiet zone</a></li>
+                </div>
+                <div class="spacing-dropdown">
+                  <li class="dropdown-title">
+                    <a class="drop-d-a-t" href="./Plan_your_trip.html"
+                      >How to get there</a
+                    >
+                  </li>
+                  <div class="mini-space"></div>
+                  <li><a class="drop-d-a d-text" href="">Distance</a></li>
+                  <li>
+                    <a class="drop-d-a d-text" href="">Public transport</a>
+                  </li>
+                  <li>
+                    <a class="drop-d-a d-text" href="">Parking & shuttlebus</a>
+                  </li>
+                </div>
+                <div class="spacing-dropdown">
+                  <li class="dropdown-title">
+                    <a class="drop-d-a-t" href="">General info</a>
+                  </li>
+                  <div class="mini-space"></div>
+                  <li><a class="drop-d-a d-text" href="">Lockers info</a></li>
+                  <li><a class="drop-d-a d-text" href="">Tour guides</a></li>
+                  <li><a class="drop-d-a d-text" href="">Expedia</a></li>
+                </div>
+              </div>
+            </ul>
           </li>
           <li><a class="menu-font" href="./Tickets.html">Tickets</a></li>
         </ul>
@@ -74,97 +129,99 @@
         <div id="form">
           <form class="single-tickets">
             <div class="border-box">
-            <p class="center-text">Single Tickets</p>
-            <div class="tickets-wrapper g-tickets-wrapper box-height">
-              <div class="tickets-flex">
-                <div>
-                  <label class="" for="Adult"
-                    ><p class="pgh-text">Adult</p></label
-                  >
+              <p class="center-text">Single Tickets</p>
+              <div class="tickets-wrapper g-tickets-wrapper box-height">
+                <div class="tickets-flex">
+                  <div>
+                    <label class="" for="Adult"
+                      ><p class="pgh-text">Adult</p></label
+                    >
+                  </div>
+                  <div class="tickets-align">
+                    <input
+                      type="number"
+                      id="Adult"
+                      name="Adult"
+                      min="1"
+                      max="8"
+                    />
+                  </div>
                 </div>
-                <div class="tickets-align">
-                  <input
-                    type="number"
-                    id="Adult"
-                    name="Adult"
-                    min="1"
-                    max="8"
-                  />
+
+                <div class="tickets-flex">
+                  <div>
+                    <label class="" for="Child">
+                      <p class="pgh-text">Child</p></label
+                    >
+                  </div>
+                  <div class="tickets-align">
+                    <input
+                      type="number"
+                      id="Child"
+                      name="Child"
+                      min="1"
+                      max="8"
+                    />
+                  </div>
+                </div>
+
+                <div class="tickets-flex">
+                  <div>
+                    <label class="" for="">
+                      <p class="pgh-text">Student</p></label
+                    >
+                  </div>
+                  <div class="tickets-align">
+                    <input
+                      type="number"
+                      id="Student"
+                      name="Student"
+                      min="1"
+                      max="8"
+                    />
+                  </div>
+                </div>
+
+                <div class="tickets-flex">
+                  <div>
+                    <label class="" for="">
+                      <p class="pgh-text">Senior</p></label
+                    >
+                  </div>
+                  <div class="tickets-align">
+                    <input
+                      type="number"
+                      id="Senior"
+                      name="Senior"
+                      min="1"
+                      max="8"
+                    />
+                  </div>
+                </div>
+
+                <div class="tickets-flex">
+                  <div>
+                    <label class="" for="">
+                      <p class="pgh-text">Family</p>
+                      <p class="pgh-text">2 adults and 3 children</p></label
+                    >
+                  </div>
+                  <div class="tickets-align">
+                    <input
+                      type="number"
+                      id="Family"
+                      name="Family"
+                      min="1"
+                      max="8"
+                    />
+                  </div>
                 </div>
               </div>
 
-              <div class="tickets-flex">
-                <div>
-                  <label class="" for="Child">
-                    <p class="pgh-text">Child</p></label
-                  >
-                </div>
-                <div class="tickets-align">
-                  <input
-                    type="number"
-                    id="Child"
-                    name="Child"
-                    min="1"
-                    max="8"
-                  />
-                </div>
-              </div>
-
-              <div class="tickets-flex">
-                <div>
-                  <label class="" for="">
-                    <p class="pgh-text">Student</p></label
-                  >
-                </div>
-                <div class="tickets-align">
-                  <input
-                    type="number"
-                    id="Student"
-                    name="Student"
-                    min="1"
-                    max="8"
-                  />
-                </div>
-              </div>
-
-              <div class="tickets-flex">
-                <div>
-                  <label class="" for=""> <p class="pgh-text">Senior</p></label>
-                </div>
-                <div class="tickets-align">
-                  <input
-                    type="number"
-                    id="Senior"
-                    name="Senior"
-                    min="1"
-                    max="8"
-                  />
-                </div>
-              </div>
-
-              <div class="tickets-flex">
-                <div>
-                  <label class="" for="">
-                    <p class="pgh-text">Family</p>
-                    <p class="pgh-text">2 adults and 3 children</p></label
-                  >
-                </div>
-                <div class="tickets-align">
-                  <input
-                    type="number"
-                    id="Family"
-                    name="Family"
-                    min="1"
-                    max="8"
-                  />
-                </div>
+              <div class="btn-tickets">
+                <button class="c-a-btn-slide pgh-text">Continue</button>
               </div>
             </div>
-
-            <div class="btn-tickets">
-              <button class="c-a-btn-slide pgh-text">Continue</button>
-            </div>
-          </div>
           </form>
         </div>
 
