i fix some padding issue thingy

--- a/Plan_your_trip.html
+++ b/Plan_your_trip.html
@@ -123,17 +123,17 @@
           <div class="HTGT__textcontent__part">
             <div class="HTGT__textcontent__wrapper">
               <img src="./Assets/car.svg" />
-              <h2>By car</h2>
+              <h2 class="nopaddingplease">By car</h2>
             </div>
-            <p class="HTGT__content__wrapper__p">
+            <p class="nomarginplease  HTGT__content__wrapper__p">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Magna
               imperdiet dictumst tempor facilisis nascetur adipiscing.
             </p>
-            <p class="HTGT__content__wrapper__p">Parking is NOK 50 per car.</p>
-            <p class="HTGT__content__wrapper__p orange_text">
+            <p class="nomarginplease  HTGT__content__wrapper__p">Parking is NOK 50 per car.</p>
+            <p class="nomarginplease  HTGT__content__wrapper__p orange_text">
               Information about parking options can be found here
             </p>
-            <p class="HTGT__content__wrapper__p">
+            <p class="nomarginplease  HTGT__content__wrapper__p">
               If you are using a GPS, use the following address: Huk Aveny 35
               0287 Oslo
             </p>
@@ -142,14 +142,14 @@
           <div class="HTGT__textcontent__part">
             <div class="HTGT__textcontent__wrapper">
               <img src="./Assets/bus.svg" />
-              <h2>By bus</h2>
+              <h2 class="nopaddingplease">By bus</h2>
             </div>
 
-            <p class="HTGT__content__wrapper__p">
+            <p class=" nomarginplease  HTGT__content__wrapper__p">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Magna
               imperdiet dictumst tempor facilisis nascetur adipiscing.
             </p>
-            <p class="HTGT__content__wrapper__p orange_text">
+            <p class="nomarginplease  HTGT__content__wrapper__p orange_text">
               Information about bus schudule can be found here
             </p>
           </div>
@@ -157,14 +157,14 @@
           <div class="HTGT__textcontent__part">
             <div class="HTGT__textcontent__wrapper">
               <img src="./Assets/train.svg" />
-              <h2>By train</h2>
+              <h2 class="nopaddingplease">By train</h2>
             </div>
 
-            <p class="HTGT__content__wrapper__p">
+            <p class="nomarginplease  HTGT__content__wrapper__p">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Magna
               imperdiet dictumst tempor facilisis nascetur adipiscing.
             </p>
-            <p class="HTGT__content__wrapper__p orange_text">
+            <p class="nomarginplease  HTGT__content__wrapper__p orange_text">
               Information about train schudule can be found here
             </p>
           </div>
