--- a/Tickets.html
+++ b/Tickets.html
@@ -158,6 +158,12 @@
       </div>
     </div>
 
+  
+      <h2 class="white_text">Choose tickets</h2>
+      <div class="card__wrapper">
+        <div class="card__img">
+          <img class="card_img_img" src="./Assets/man og drage.png" />
+        </div>
 
         <div class="card__text card_box white_text">
           <h3>Single tickets</h3>
