--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./CSS/stylesheet.css" />
     <link rel="stylesheet" href="./CSS/slideshow.css" />
     <link rel="stylesheet" href="./CSS/nav-bar.css" />
+    <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
   </head>
   <body class="black_background">
     <header>
