--- a/webstore.html
+++ b/webstore.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./CSS/video.css" />
     <link rel="stylesheet" href="./CSS/nav-bar.css" />
     <link rel="stylesheet" href="./CSS/Tickets.css" />
+    <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon" />
   </head>
   <body>
     <header>
