--- a/Osebergship_overlay.html
+++ b/Osebergship_overlay.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./CSS/Card_img_text.css" />
     <link rel="stylesheet" href="./CSS/overlay.css" />
     <link rel="stylesheet" href="./CSS/nav-bar.css" />
+    <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
   </head>
 
   <body>
