--- a/Tickets.html
+++ b/Tickets.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./CSS/slideshow.css" />
     <link rel="stylesheet" href="./CSS/video.css" />
     <link rel="stylesheet" href="./CSS/nav-bar.css" />
+    <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
   </head>
 
   <body class="black_background">
