centered text on tickets.html

--- a/Tickets.html
+++ b/Tickets.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="./CSS/slideshow.css" />
     <link rel="stylesheet" href="./CSS/video.css" />
     <link rel="stylesheet" href="./CSS/nav-bar.css" />
+    <link rel="stylesheet" href="./CSS/Tickets.css">
     <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
   </head>
-
   <body class="black_background">
     <header>
         <nav>
@@ -147,7 +147,6 @@
             alt="Bueskytter med mørk bakgrunn"
             class="hero__cover"
           />
-
           <div class="hero_box_secondary card_box white_text">
             <p>Mon - Fri 10-19 | Sat - Sun 11-20</p>
             <h1>Tickets</h1>
@@ -158,9 +157,7 @@
         </div>
       </div>
     </div>
-
-  
-      <h2 class="white_text">Choose tickets</h2>
+    <h2 class="white_text center_text">Choose tickets</h2>
       <div class="card__wrapper">
         <div class="card__img">
           <img class="card_img_img" src="./Assets/man og drage.png" />
@@ -180,7 +177,6 @@
           >
         </div>
       </div>
-
       <div class="card__wrapper">
         <div class="card__text--reverse card_box white_text">
           <h3>Family tickets</h3>
@@ -193,17 +189,14 @@
             ><button class="c-a-btn-slide">Choose your tickets</button></a
           >
         </div>
-
         <div class="card__img">
           <img class="card_img_img" src="./Assets/man og barn.png" />
         </div>
       </div>
-
       <div class="card__wrapper">
         <div class="card__img">
           <img class="card_img_img" src="./Assets/Vikings.png" />
         </div>
-
         <div class="card__text card_box white_text">
           <h3>Group tickets</h3>
           <p>
@@ -219,13 +212,11 @@
         </div>
       </div>
     </div>
-
-    <h2 class="white_text">Book your guide</h2>
+    <h2 class="white_text center_text text-book-guide">Book your guide</h2>
     <div class="ren body vid-ex">
       <br />
       <img src="./Assets/barn med guide.png" alt="" />
     </div>
-
     <div class="vid-textbox-wrapper card_box white_text">
       <h3>Book your guide</h3>
       <p class="text">
@@ -237,9 +228,7 @@
       </p>
       <button class="c-a-btn-slide">Learn more</button>
     </div>
-
-    <h2 class="white_text">Special needs</h2>
-
+    <h2 class="white_text center_text">Special needs</h2>
     <div class="container">
       <div class="slideshow-container">
         <div class="mySlides fade">
@@ -262,7 +251,6 @@
             </div>
           </div>
         </div>
-
         <div class="mySlides fade">
           <div class="card-slid">
             <img
@@ -283,7 +271,6 @@
             </div>
           </div>
         </div>
-
         <div class="mySlides fade">
           <div class="card-slid">
             <img
@@ -304,7 +291,6 @@
             </div>
           </div>
         </div>
-
         <div class="mySlides fade">
           <div class="card-slid">
             <img
@@ -325,7 +311,6 @@
             </div>
           </div>
         </div>
-
         <div class="mySlides fade">
           <div class="card-slid">
             <img
@@ -348,7 +333,6 @@
         </div>
       </div>
       <br />
-
       <div class="dots-man">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
@@ -357,15 +341,12 @@
         <span class="dot" onclick="currentSlide(5)"></span>
       </div>
     </div>
-
     <div class="con app">
       <img class="mobilehide" src="./Assets/App-splash.jpg" />
       <img class="desktophide" src="./Assets/App-splash-mobile.jpg" />
     </div>
-
     <div class="con ren"></div>
     <script src="js/slideshow.js"></script>
-
     <footer>
       <div class="footer-wrapper">
         <div class="footer-wrapper__logo">
