mobil version fixes here and there

--- a/Explore_the_museum.html
+++ b/Explore_the_museum.html
@@ -123,7 +123,7 @@
               vivamus nec sagittis.
             </p>
             <a href="Osebergship_overlay.html"
-              ><button class="c-a-btn-slide">Learn more</button></a
+              ><button class="c-a-btn">Learn more</button></a
             >
           </div>
         </div>
@@ -137,7 +137,7 @@
               nunc viverra amet.
             </p>
 
-            <button class="c-a-btn-slide">Learn more</button>
+            <button class="c-a-btn">Learn more</button>
           </div>
 
           <div class="card__img">
@@ -162,7 +162,7 @@
               dictum praesent ac. Nunc et, cras ligula iaculis vitae nisl
               vivamus nec sagittis.
             </p>
-            <button class="c-a-btn-slide">Learn more</button>
+            <button class="c-a-btn">Learn more</button>
           </div>
         </div>
 
@@ -177,7 +177,7 @@
 
         <div class="vid-textbox-wrapper card_box centeredtext white_text">
           <h3>VR</h3>
-          <p class="text">
+          <p class="text mobil-hero-fix-p">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis
             alias totam cumque saepe quibusdam dolore ea dignissimos rem debitis
             doloribus corporis hic animi voluptas, recusandae, expedita
@@ -341,7 +341,7 @@
                     <div class="card__text card_box white_text">
                         <h3>Viking face paint</h3>
                         <div class="card-time-TX"> <p>15.01.22 - 17.05.22 <br><br>Price: Free <p class="Tx_start_right">Everyday | 2pm</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta sit mauris faucibus aliquet et. Volutpat aliquam et,
+                        <p class="p-fix">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta sit mauris faucibus aliquet et. Volutpat aliquam et,
                              diam libero ultricies dictum et. Ullamcorper sed aliquam.
                             </p>
                         <button class="c-a-btn-slide">Reserve</button>
@@ -423,7 +423,7 @@
         </div>
 
         <h2 class="white_text">Workshops</h2>
-        <div class="card__wrapper">
+        <div class="card__wrapper card-fix-height">
           <div class="card__img">
             <img class="card_img_img" src="./Assets/Viking_frue.png" />
           </div>
@@ -431,10 +431,10 @@
           <div class="card__text card_box white_text">
             <h3>Viking face paint</h3>
             <div class="card-time-TX">
-              <p>15.01.22 - 17.05.22 <br /><br />Price: Free</p>
+              <p class="mobil-hero-fix-p">15.01.22 - 17.05.22 <br /><br />Price: Free</p>
               <p class="Tx_start_right">Everyday | 2pm</p>
             </div>
-            <p>
+            <p class="mobil-hero-fix-p">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta
               sit mauris faucibus aliquet et. Volutpat aliquam et, diam libero
               ultricies dictum et. Ullamcorper sed aliquam.
@@ -447,7 +447,7 @@
           <div class="card__text--reverse card_box white_text">
             <h3>Build your own shield</h3>
             <div class="card-time-TX">
-              <p>
+              <p class="text mobil-hero-fix-p">
                 03.01.22 - 01.08.22 <br />
                 <br />Price: Free
               </p>
@@ -473,7 +473,7 @@
         <br>
         <div class="vid-textbox-wrapper card_box white_text">
           <h3>Audio Tour Guides</h3>
-          <p class="text">
+          <p class="text mobil-hero-fix-p">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit ornare
             eget donec sit sed sit aliquam tincidunt. Nec scelerisque dignissim
             sit gravida etiam. Nec, nec auctor aliquam erat egestas aliquam
@@ -493,9 +493,9 @@
         </div>
 
         <div class="card__wrapper">
-          <div class="card__text--reverse card_box white_text">
+          <div class="card__text--reverse card_box white_text height-auto">
             <h3>Fun with QR</h3>
-            <p>
+            <p class="mobil-hero-fix-p">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rutrum
               nullam nisi enim, felis elit at diam tellus. Viverra diam lorem
               nunc viverra amet. Lorem ipsum dolor sit, amet consectetur
@@ -503,9 +503,7 @@
               ad nihil velit eum quo, rerum voluptatem quam perferendis iusto
               facilis in animi, vitae recusandae.
             </p>
-        
-            <button class="c-a-btn-slide">Learn more</button>
-            
+            <button class="c-a-btn">Learn more</button>
           </div>
 
           <div class="card__img__bg">
