--- a/Tickets.html
+++ b/Tickets.html
@@ -49,17 +49,6 @@
         </nav>
       </header>
     <div>
-        
-        </div>
-        <a href="./index.html"
-          ><img class="brand" src="./Assets/logo vikingtidmuseet.png"
-        /></a>
-        <input type="checkbox" id="nav" />
-        <label for="nav">
-          <span></span>
-          <span></span>
-          <span></span>
-        </label>
         <ul class="menu" id="nav">
           <li>
             <a class="menu-font" href="./Explore_the_museum.html"
@@ -145,10 +134,10 @@
           <img
             src="./Assets/bar og dame.png"
             alt="Bueskytter med mørk bakgrunn"
-            class="hero__cover"
+            class="hero__cover img-background-fix-2"
           />
           <div class="hero_box_secondary card_box white_text">
-            <p>Mon - Fri 10-19 | Sat - Sun 11-20</p>
+            <p class="mobil-hero-fix-p">Mon - Fri 10-19 | Sat - Sun 11-20</p>
             <h1>Tickets</h1>
             <a href="/webstore.html"
               ><button class="c-a-btn-slide">Tickets</button></a
@@ -165,7 +154,7 @@
 
         <div class="card__text card_box white_text">
           <h3>Single tickets</h3>
-          <p>
+          <p class="mobil-hero-fix-p">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta
             sit mauris faucibus aliquet et. Volutpat aliquam et, diam libero
             ultricies dictum et. Ullamcorper sed aliquam amet leo odio sed
@@ -173,20 +162,20 @@
             nec sagittis.
           </p>
           <a href="./webstore.html"
-            ><button class="c-a-btn-slide">Choose your tickets</button></a
+            ><button class="c-a-btn">Choose your tickets</button></a
           >
         </div>
       </div>
       <div class="card__wrapper">
-        <div class="card__text--reverse card_box white_text">
+        <div class="card__text--reverse size-fix card_box white_text">
           <h3>Family tickets</h3>
-          <p>
+          <p class="mobil-hero-fix-p">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rutrum
             nullam nisi enim, felis elit at diam tellus. Viverra diam lorem nunc
             viverra amet.
           </p>
           <a href="./webstore.html"
-            ><button class="c-a-btn-slide">Choose your tickets</button></a
+            ><button class="c-a-btn">Choose your tickets</button></a
           >
         </div>
         <div class="card__img">
@@ -199,7 +188,7 @@
         </div>
         <div class="card__text card_box white_text">
           <h3>Group tickets</h3>
-          <p>
+          <p class="mobil-hero-fix-p">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta
             sit mauris faucibus aliquet et. Volutpat aliquam et, diam libero
             ultricies dictum et. Ullamcorper sed aliquam amet leo odio sed
@@ -207,7 +196,7 @@
             nec sagittis.
           </p>
           <a href="./webstore.html"
-            ><button class="c-a-btn-slide">Choose your tickets</button></a
+            ><button class="c-a-btn">Choose your tickets</button></a
           >
         </div>
       </div>
@@ -215,18 +204,18 @@
     <h2 class="white_text center_text text-book-guide">Book your guide</h2>
     <div class="ren body vid-ex">
       <br />
-      <img src="./Assets/barn med guide.png" alt="" />
+      <img class="img-background-fix" src="./Assets/barn med guide.png" alt="" />
     </div>
     <div class="vid-textbox-wrapper card_box white_text">
       <h3>Book your guide</h3>
-      <p class="text">
+      <p class="text mobil-hero-fix-p">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis
         alias totam cumque saepe quibusdam dolore ea dignissimos rem debitis
         doloribus corporis hic animi voluptas, recusandae, expedita
         reprehenderit commodi blanditiis officiis ullam ipsum nam eligendi ipsam
         asperiores cum. Libero, eaque unde.
       </p>
-      <button class="c-a-btn-slide">Learn more</button>
+      <button class="c-a-btn">Learn more</button>
     </div>
     <h2 class="white_text center_text">Special needs</h2>
     <div class="container">
@@ -247,7 +236,7 @@
                 laborum, reprehenderit amet.
               </p>
               <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-              <button class="c-a-btn-slide">Learn more</button>
+              <button class="c-a-btn">Learn more</button>
             </div>
           </div>
         </div>
@@ -267,7 +256,7 @@
                 laborum, reprehenderit amet.
               </p>
               <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-              <button class="c-a-btn-slide">Learn more</button>
+              <button class="c-a-btn">Learn more</button>
             </div>
           </div>
         </div>
@@ -287,7 +276,7 @@
                 laborum, reprehenderit amet.
               </p>
               <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-              <button class="c-a-btn-slide">Learn more</button>
+              <button class="c-a-btn">Learn more</button>
             </div>
           </div>
         </div>
@@ -307,7 +296,7 @@
                 laborum, reprehenderit amet.
               </p>
               <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-              <button class="c-a-btn-slide">Learn more</button>
+              <button class="c-a-btn">Learn more</button>
             </div>
           </div>
         </div>
@@ -327,7 +316,7 @@
                 laborum, reprehenderit amet.
               </p>
               <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-              <button class="c-a-btn-slide">Learn more</button>
+              <button class="c-a-btn">Learn more</button>
             </div>
           </div>
         </div>
