--- a/Tickets.html
+++ b/Tickets.html
@@ -146,7 +146,7 @@
         </div>
       </div>
     </div>
-    <h2 class="white_text center_text">Choose tickets</h2>
+    <h2 class="white_text centeredtext">Choose tickets</h2>
       <div class="card__wrapper">
         <div class="card__img">
           <img class="card_img_img" src="./Assets/man og drage.png" />
@@ -201,7 +201,7 @@
         </div>
       </div>
     </div>
-    <h2 class="white_text center_text text-book-guide">Book your guide</h2>
+    <h2 class="white_text centeredtext text-book-guide">Book your guide</h2>
     <div class="ren body vid-ex">
       <br />
       <img class="img-background-fix" src="./Assets/barn med guide.png" alt="" />
@@ -217,7 +217,7 @@
       </p>
       <button class="c-a-btn">Learn more</button>
     </div>
-    <h2 class="white_text center_text">Special needs</h2>
+    <h2 class="white_text centeredtext">Special needs</h2>
     <div class="container">
       <div class="slideshow-container">
         <div class="mySlides fade">
@@ -330,9 +330,12 @@
         <span class="dot" onclick="currentSlide(5)"></span>
       </div>
     </div>
-    <div class="con app">
-      <img class="mobilehide" src="./Assets/App-splash.jpg" />
-      <img class="desktophide" src="./Assets/App-splash-mobile.jpg" />
+    <div class="itry mobilehide">
+      <img src="./Assets/App-splash.jpg">
+    </div>
+
+    <div class="itry desktophide">
+      <img src="./Assets/App-splash-mobile.jpg">
     </div>
     <div class="con ren"></div>
     <script src="js/slideshow.js"></script>
